tests/continue/invalid/semantic/ContinueNotInLoop2.wacc
# break is not used inside a loop

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  if true then
    continue
  else
    skip
  fi
end
